@@ -8,26 +8,22 @@ import com.akto.dao.JiraIntegrationDao;
 import com.akto.dao.context.Context;
 import com.akto.dao.test_editor.YamlTemplateDao;
 import com.akto.dao.testing.BidirectionalSyncSettingsDao;
+import com.akto.dao.testing.RemediationsDao;
 import com.akto.dao.testing.TestingRunResultDao;
 import com.akto.dao.testing_run_findings.TestingRunIssuesDao;
 import com.akto.dto.Config.AktoHostUrlConfig;
 import com.akto.dto.Config.ConfigType;
+import com.akto.dto.AccountSettings;
 import com.akto.dto.OriginalHttpRequest;
 import com.akto.dto.OriginalHttpResponse;
-import com.akto.dto.jira_integration.BiDirectionalSyncSettings;
-import com.akto.dto.jira_integration.JiraIntegration;
-import com.akto.dto.jira_integration.JiraMetaData;
-import com.akto.dto.jira_integration.JiraStatus;
-import com.akto.dto.jira_integration.JiraStatusApiResponse;
-import com.akto.dto.jira_integration.ProjectMapping;
-import com.akto.dto.jobs.Job;
-import com.akto.dto.jobs.JobExecutorType;
-import com.akto.dto.jobs.TicketSyncJobParams;
+import com.akto.dto.jira_integration.*;
+import com.akto.dto.jobs.*;
 import com.akto.dto.test_editor.Info;
 import com.akto.dto.test_editor.YamlTemplate;
 import com.akto.dto.test_run_findings.TestingIssuesId;
 import com.akto.dto.test_run_findings.TestingRunIssues;
 import com.akto.dto.testing.BidirectionalSyncSettings;
+import com.akto.dto.testing.Remediation;
 import com.akto.dto.testing.TestResult;
 import com.akto.dto.testing.TestingRunResult;
 import com.akto.jobs.JobScheduler;
@@ -38,6 +34,7 @@ import com.akto.test_editor.Utils;
 import com.akto.testing.ApiExecutor;
 import com.akto.util.Constants;
 import com.akto.util.DashboardMode;
+import com.akto.util.Pair;
 import com.akto.util.enums.GlobalEnums;
 import com.akto.util.enums.GlobalEnums.TicketSource;
 import com.akto.util.http_util.CoreHTTPClient;
@@ -45,38 +42,40 @@ import com.akto.utils.JsonUtils;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.mongodb.BasicDBList;
 import com.mongodb.BasicDBObject;
-import com.mongodb.client.model.Filters;
-import com.mongodb.client.model.FindOneAndUpdateOptions;
-import com.mongodb.client.model.Projections;
-import com.mongodb.client.model.ReturnDocument;
-import com.mongodb.client.model.UpdateOptions;
-import com.mongodb.client.model.Updates;
+import com.mongodb.client.model.*;
 import com.opensymphony.xwork2.Action;
+
+import java.net.URI;
+import java.util.function.Function;
+import lombok.Setter;
+
 import java.io.File;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Base64;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
+
 import javax.servlet.http.HttpServletRequest;
-import okhttp3.Call;
-import okhttp3.MediaType;
-import okhttp3.MultipartBody;
-import okhttp3.OkHttpClient;
-import okhttp3.Request;
-import okhttp3.RequestBody;
-import okhttp3.Response;
+import okhttp3.*;
+
+import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.struts2.interceptor.ServletRequestAware;
 import org.bson.Document;
 import org.bson.conversions.Bson;
 import org.bson.types.ObjectId;
+
+import com.akto.dao.AccountSettingsDao;
+
+import static com.akto.utils.jira.Utils.buildAdditionalIssueFieldsForJira;
+import static com.akto.utils.jira.Utils.buildApiToken;
+import static com.akto.utils.jira.Utils.buildBasicRequest;
+import static com.akto.utils.jira.Utils.buildPayloadForJiraTicket;
+import static com.akto.utils.jira.Utils.getAccountJiraFields;
+import static com.akto.utils.jira.Utils.isLabelsFieldError;
+import static com.akto.utils.jira.Utils.getJiraTicketUrlPair;
+import static com.akto.utils.jira.Utils.handleError;
+import static com.akto.utils.jira.Utils.retryWithoutGzipRequest;
+
 
 public class JiraIntegrationAction extends UserAction implements ServletRequestAware {
 
@@ -96,6 +95,9 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
 
     private String dashboardUrl;
 
+    @Setter
+    private String actionItemType;
+
     private Map<String,List<BasicDBObject>> projectAndIssueMap;
     private Map<String, ProjectMapping> projectMappings;
 
@@ -104,6 +106,7 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
     private static final String CREATE_ISSUE_ENDPOINT_BULK = "/rest/api/3/issue/bulk";
     private static final String ATTACH_FILE_ENDPOINT = "/attachments";
     private static final String ISSUE_STATUS_ENDPOINT = "/rest/api/3/project/%s/statuses";
+
     private static final LoggerMaker loggerMaker = new LoggerMaker(ApiExecutor.class, LogDb.DASHBOARD);
 
     private static final int TICKET_SYNC_JOB_RECURRING_INTERVAL_SECONDS = 3600;
@@ -113,22 +116,19 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             .writeTimeout(60, TimeUnit.SECONDS)
             .build();
 
+    private static final String REMEDIATION_INFO_URL = "tests-library-master/remediation/%s.md";
+
+    @Setter
+    private String title;
+    @Setter
+    private String description;
+
     public String testIntegration() {
 
         String url = baseUrl + META_ENDPOINT;
-        if(apiToken.contains("******")){
-            JiraIntegration jiraIntegration = JiraIntegrationDao.instance.findOne(Filters.empty());
-            if(jiraIntegration != null){
-                setApiToken(jiraIntegration.getApiToken());
-            }
-        }
-        String authHeader = Base64.getEncoder().encodeToString((userEmail + ":" + apiToken).getBytes());
+        setApiToken(buildApiToken(apiToken));
         try {
-
-            Request.Builder builder = new Request.Builder();
-            builder.addHeader("Authorization", "Basic " + authHeader);
-            builder.addHeader("Accept-Encoding", "gzip");
-            builder = builder.url(url);
+            Request.Builder builder = buildBasicRequest(url, userEmail, apiToken, true);
             Request okHttpRequest = builder.build();
             Call call = client.newCall(okHttpRequest);
             Response response = null;
@@ -142,9 +142,7 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
                     return Action.ERROR.toUpperCase();
                 }
                 if (!Utils.isJsonPayload(responsePayload)) {
-                    builder.removeHeader("Accept-Encoding");
-                    builder = builder.url(url);
-                    okHttpRequest = builder.build();
+                    okHttpRequest = retryWithoutGzipRequest(builder, url);
                     call = client.newCall(okHttpRequest);
                     response = call.execute();
                     responsePayload = response.body().string();
@@ -200,25 +198,13 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
     }
 
     public String fetchJiraStatusMappings() {
-        if(apiToken.contains("******")){
-            JiraIntegration jiraIntegration = JiraIntegrationDao.instance.findOne(Filters.empty());
-            if(jiraIntegration != null){
-                setApiToken(jiraIntegration.getApiToken());
-            }
-        }
-
-        String authHeader = Base64.getEncoder().encodeToString((userEmail + ":" + apiToken).getBytes());
-
+        setApiToken(buildApiToken(apiToken));
         try {
             setProjId(projId.replaceAll("\\s+", ""));
 
             // Step 2: Call the API to get issue types for the project
             String statusUrl = baseUrl + String.format(ISSUE_STATUS_ENDPOINT, projId) + "?maxResults=100";
-
-            Request.Builder builder = new Request.Builder();
-            builder.addHeader("Authorization", "Basic " + authHeader);
-            builder.addHeader("Accept", "application/json");
-            builder = builder.url(statusUrl);
+            Request.Builder builder = buildBasicRequest(statusUrl, userEmail, apiToken, false);
             Request okHttpRequest = builder.build();
 
             Response response = null;
@@ -471,22 +457,12 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
 
     private List<BasicDBObject> getProjectMetadata(String projectId) throws Exception {
 
-        if (apiToken.contains("******")) {
-            JiraIntegration jiraIntegration = JiraIntegrationDao.instance.findOne(Filters.empty());
-            if (jiraIntegration != null) {
-                setApiToken(jiraIntegration.getApiToken());
-            } else {
-                throw new IllegalStateException("No Jira integration found");
-            }
+        setApiToken(buildApiToken(apiToken));
+        if(apiToken == null){
+            throw new IllegalStateException("No jira integration found. Please integrate Jira first.");
         }
-
         String url = baseUrl + META_ENDPOINT;
-        String authHeader = Base64.getEncoder().encodeToString((userEmail + ":" + apiToken).getBytes());
-
-        Request.Builder builder = new Request.Builder();
-        builder.addHeader("Authorization", "Basic " + authHeader);
-        builder.addHeader("Accept-Encoding", "gzip");
-        builder = builder.url(url);
+        Request.Builder builder = buildBasicRequest(url, userEmail, apiToken, true);
         Request okHttpRequest = builder.build();
 
         Response response = null;
@@ -497,9 +473,7 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             responsePayload = response.body().string();
 
             if (!Utils.isJsonPayload(responsePayload)) {
-                builder.removeHeader("Accept-Encoding");
-                builder = builder.url(url);
-                okHttpRequest = builder.build();
+                okHttpRequest = retryWithoutGzipRequest(builder, url);
                 response = client.newCall(okHttpRequest).execute();
                 responsePayload = response.body().string();
             }
@@ -536,6 +510,20 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
         return Action.SUCCESS.toUpperCase();
     }
 
+    Map<String, Map<String, BasicDBList>> createIssueFieldMetaData;
+    public String fetchCreateIssueFieldMetaData() {
+
+        JiraIntegration jiraIntegration = JiraIntegrationDao.instance.findOne(new BasicDBObject());
+        if (jiraIntegration == null) {
+            addActionError("Jira is not integrated.");
+            return ERROR.toUpperCase();
+        }
+
+        createIssueFieldMetaData = getAccountJiraFields();
+
+        return Action.SUCCESS.toUpperCase();
+    }
+
     public String createIssue() {
 
         BasicDBObject reqPayload = new BasicDBObject();
@@ -544,7 +532,17 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             addActionError("Jira is not integrated.");
             return ERROR.toUpperCase();
         }
-        BasicDBObject fields = jiraTicketPayloadCreator(jiraMetaData);
+
+        TestingRunIssues testingRunIssues = TestingRunIssuesDao.instance.findOne(
+            Filters.eq(Constants.ID, jiraMetaData.getTestingIssueId()));
+        YamlTemplate yamlTemplate = YamlTemplateDao.instance.findOne(
+            Filters.eq(Constants.ID, jiraMetaData.getTestingIssueId().getTestSubCategory()),
+            Projections.include(YamlTemplate.INFO));
+        Remediation remediation = RemediationsDao.instance.findOne(
+            Filters.eq(Constants.ID,
+                getRemediationId(jiraMetaData.getTestingIssueId().getTestSubCategory())));
+        BasicDBObject fields = jiraTicketPayloadCreator(jiraMetaData, testingRunIssues, yamlTemplate.getInfo(),
+            remediation);
 
         reqPayload.put("fields", fields);
 
@@ -560,29 +558,38 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             String responsePayload = response.getBody();
             if (response.getStatusCode() > 201 || responsePayload == null) {
                 loggerMaker.errorAndAddToDb("error while creating jira issue, url not accessible, requestbody " + request.getBody() + " ,responsebody " + response.getBody() + " ,responsestatus " + response.getStatusCode(), LoggerMaker.LogDb.DASHBOARD);
-                if (responsePayload != null) {
-                    try {
-                        BasicDBObject obj = BasicDBObject.parse(responsePayload);
-                        List<String> errorMessages = (List) obj.get("errorMessages");
-                        String error;
-                        if (errorMessages.size() == 0) {
-                            BasicDBObject errObj = BasicDBObject.parse(obj.getString("errors"));
-                            error = errObj.getString("project");
-                        } else {
-                            error = errorMessages.get(0);
+                
+                // Check if it's a labels field error and retry without labels
+                if (isLabelsFieldError(responsePayload)) {
+                    loggerMaker.info("Labels field error detected, retrying without labels field", LoggerMaker.LogDb.DASHBOARD);
+                    fields.remove("labels");
+                    reqPayload.put("fields", fields);
+                    
+                    // Create new request without labels
+                    OriginalHttpRequest retryRequest = new OriginalHttpRequest(url, "", "POST", reqPayload.toString(), headers, "");
+                    response = ApiExecutor.sendRequest(retryRequest, true, null, false, new ArrayList<>());
+                    responsePayload = response.getBody();
+                    
+                    if (response.getStatusCode() > 201 || responsePayload == null) {
+                        loggerMaker.errorAndAddToDb("error while creating jira issue after retry without labels, requestbody " + retryRequest.getBody() + " ,responsebody " + response.getBody() + " ,responsestatus " + response.getStatusCode(), LoggerMaker.LogDb.DASHBOARD);
+                        String error = handleError(responsePayload);
+                        if (error != null) {
+                            addActionError("Error while creating jira issue: " + error);
                         }
-                        addActionError(error);
-                    } catch (Exception e) {
-                        // TODO: handle exception
+                        return Action.ERROR.toUpperCase();
                     }
+                } else {
+                    String error = handleError(responsePayload);
+                    if (error != null) {
+                        addActionError("Error while creating jira issue: " + error);
+                    }
+                    return Action.ERROR.toUpperCase();
                 }
-                return Action.ERROR.toUpperCase();
             }
-            BasicDBObject payloadObj;
             try {
-                payloadObj =  BasicDBObject.parse(responsePayload);
-                this.jiraTicketKey = payloadObj.getString("key");
-                jiraTicketUrl = jiraIntegration.getBaseUrl() + "/browse/" + this.jiraTicketKey;
+                Pair<String, String> pair = getJiraTicketUrlPair(responsePayload, jiraIntegration.getBaseUrl());
+                this.jiraTicketKey = pair.getSecond();
+                jiraTicketUrl = pair.getFirst();
             } catch(Exception e) {
                 loggerMaker.errorAndAddToDb(e, "error making jira issue url " + e.getMessage(), LoggerMaker.LogDb.DASHBOARD);
                 return Action.ERROR.toUpperCase();
@@ -615,8 +622,6 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
         try {
             jiraIntegration = JiraIntegrationDao.instance.findOne(new BasicDBObject());
             String url = jiraIntegration.getBaseUrl() + CREATE_ISSUE_ENDPOINT + "/" + issueId + ATTACH_FILE_ENDPOINT;
-            String authHeader = Base64.getEncoder().encodeToString((jiraIntegration.getUserEmail() + ":" + jiraIntegration.getApiToken()).getBytes());
-
             File tmpOutputFile = createRequestFile(origReq, testReq);
             if(tmpOutputFile == null) {
                 return Action.SUCCESS.toUpperCase();
@@ -627,14 +632,11 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
                     .addFormDataPart("file", tmpOutputFile.getName(),
                             RequestBody.create(tmpOutputFile, mType))
                     .build();
+            Request.Builder builder = buildBasicRequest(url, jiraIntegration.getUserEmail(), jiraIntegration.getApiToken(), false);
 
-            Request request = new Request.Builder()
-                    .url(url)
-                    .post(requestBody)
-                    .header("Authorization", "Basic " + authHeader)
-                    .header("X-Atlassian-Token", "nocheck")
-                    .build();
-
+            builder.removeHeader("Accept");
+            builder.addHeader("X-Atlassian-Token", "no-check");
+            Request request = builder.post(requestBody).build();
             Response response = null;
 
             try {
@@ -723,10 +725,21 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
 
         List<TestingRunResult> testingRunResultList = new ArrayList<>();
         int existingIssues = 0;
-        List<TestingRunIssues> testingRunIssuesList = TestingRunIssuesDao.instance.findAll(Filters.and(
-                Filters.in("_id", issuesIds),
-                Filters.exists("jiraIssueUrl", true)
-        ));
+        List<TestingRunIssues> testingRunIssuesList = TestingRunIssuesDao.instance.findAll(
+            Filters.in("_id", issuesIds),
+            Projections.include(Constants.ID, TestingRunIssues.JIRA_ISSUE_URL,
+                TestingRunIssues.TEST_RUN_ISSUES_STATUS, TestingRunIssues.LAST_UPDATED, TestingRunIssues.CREATION_TIME,
+                TestingRunIssues.KEY_SEVERITY, TestingRunIssues.IGNORE_REASON)
+        );
+
+        Map<TestingIssuesId, TestingRunIssues> issuesEligibleForJiraMap = testingRunIssuesList.stream()
+            .filter(issue -> StringUtils.isBlank(issue.getJiraIssueUrl()))
+            .collect(Collectors.toMap(TestingRunIssues::getId, Function.identity()));
+
+        testingRunIssuesList = testingRunIssuesList.stream().filter(
+            issue -> StringUtils.isNotBlank(issue.getJiraIssueUrl())
+        ).collect(Collectors.toList());
+
         Set<TestingIssuesId> testingRunIssueIds = new HashSet<>();
         for (TestingRunIssues testingRunIssues : testingRunIssuesList) {
             testingRunIssueIds.add(testingRunIssues.getId());
@@ -756,9 +769,14 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             try {
                 String inputUrl = testingIssuesId.getApiInfoKey().getUrl();
 
-                URL url = new URL(inputUrl);
+                URI url = new URI(inputUrl);
                 String hostname = url.getHost();
                 String endpoint = url.getPath();
+
+                Map<String, Object> additionalFields = null;
+                if (this.jiraMetaData != null && this.jiraMetaData.getAdditionalIssueFields() != null) {
+                    additionalFields = this.jiraMetaData.getAdditionalIssueFields();
+                }
 
                 jiraMetaData = new JiraMetaData(
                         info.getName(),
@@ -767,7 +785,8 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
                         aktoDashboardHost+"/dashboard/issues?result="+testingRunResult.getId().toHexString(),
                         info.getDescription(),
                         testingIssuesId,
-                        null
+                        null,
+                        additionalFields
                 );
 
             } catch (Exception e) {
@@ -791,8 +810,14 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             return Action.SUCCESS.toUpperCase();
         }
 
+        Map<String, Remediation> remediationMap = getRemediationMap(testingSubCategories);
+
         for (JiraMetaData jiraMetaData : jiraMetaDataList) {
-            BasicDBObject fields = jiraTicketPayloadCreator(jiraMetaData);
+            TestingIssuesId issuesId = jiraMetaData.getTestingIssueId();
+            BasicDBObject fields = jiraTicketPayloadCreator(jiraMetaData,
+                issuesEligibleForJiraMap.get(issuesId),
+                testSubTypeToInfoMap.get(issuesId.getTestSubCategory()),
+                remediationMap.get(getRemediationId(issuesId.getTestSubCategory())));
 
             // Prepare the issue object
             BasicDBObject issueObject = new BasicDBObject();
@@ -821,25 +846,39 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
                                 + request.getBody() + " ,response body " + response.getBody() + " ,response status " + response.getStatusCode(),
                         LoggerMaker.LogDb.DASHBOARD);
 
-                // TODO: This is a duplicated function remove it.
-                if (responsePayload != null) {
-                    try {
-                        BasicDBObject obj = BasicDBObject.parse(responsePayload);
-                        List<String> errorMessages = (List) obj.get("errorMessages");
-                        String error;
-                        if (errorMessages.size() == 0) {
-                            BasicDBObject errObj = BasicDBObject.parse(obj.getString("errors"));
-                            error = errObj.getString("project");
-                        } else {
-                            error = errorMessages.get(0);
+                // Check if it's a labels field error and retry without labels
+                if (isLabelsFieldError(responsePayload)) {
+                    loggerMaker.infoAndAddToDb("Labels field error detected in bulk request, retrying without labels field", LoggerMaker.LogDb.DASHBOARD);
+                    for (Object issueUpdateObj : issueUpdates) {
+                        BasicDBObject issueUpdate = (BasicDBObject) issueUpdateObj;
+                        BasicDBObject fields = (BasicDBObject) issueUpdate.get("fields");
+                        if (fields != null) {
+                            fields.remove("labels");
                         }
-                        addActionError(error);
-                    } catch (Exception e) {
-                        // Handle exception
                     }
+                    
+                    // Create new request without labels
+                    OriginalHttpRequest retryRequest = new OriginalHttpRequest(url, "", "POST", reqPayload.toString(), headers, "");
+                    response = ApiExecutor.sendRequest(retryRequest, true, null, false, new ArrayList<>());
+                    responsePayload = response.getBody();
+                    
+                    if (response.getStatusCode() > 201 || responsePayload == null) {
+                        loggerMaker.errorAndAddToDb("Error while creating Jira issues in bulk after retry without labels, request body "
+                                        + retryRequest.getBody() + " ,response body " + response.getBody() + " ,response status " + response.getStatusCode(),
+                                LoggerMaker.LogDb.DASHBOARD);
+                        String error = handleError(responsePayload);
+                        if (error != null) {
+                            addActionError("Error while creating Jira issues in bulk: " + error);
+                        }
+                        return Action.ERROR.toUpperCase();
+                    }
+                } else {
+                    String error = handleError(responsePayload);
+                    if (error != null) {
+                        addActionError("Error while creating Jira issues in bulk: " + error);
+                    }
+                    return Action.ERROR.toUpperCase();
                 }
-
-                return Action.ERROR.toUpperCase();
             }
 
             BasicDBObject payloadObj;
@@ -896,8 +935,8 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
         return Action.SUCCESS.toUpperCase();
     }
 
-    private BasicDBObject jiraTicketPayloadCreator(JiraMetaData jiraMetaData) {
-        BasicDBObject fields = new BasicDBObject();
+    private BasicDBObject jiraTicketPayloadCreator(JiraMetaData jiraMetaData, TestingRunIssues issue,
+        Info info, Remediation remediation) {
         String endpoint = jiraMetaData.getEndPointStr().replace("Endpoint - ", "");
         String truncatedEndpoint = endpoint;
         if(endpoint.length() > 30) {
@@ -907,34 +946,39 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
         String endpointMethod = jiraMetaData.getTestingIssueId().getApiInfoKey().getMethod().name();
 
         // issue title
-        fields.put("summary", "Akto Report - " + jiraMetaData.getIssueTitle() + " (" + endpointMethod + " - " + truncatedEndpoint + ")");
+        String summary = "Akto Report - " + jiraMetaData.getIssueTitle() + " (" + endpointMethod + " - " + truncatedEndpoint + ")";
 
-        // Issue type (TASK)
-        BasicDBObject issueTypeObj = new BasicDBObject();
-        issueTypeObj.put("id", this.issueType);
-        fields.put("issuetype", issueTypeObj);
-        fields.put("labels", new String[] {JobConstants.TICKET_LABEL_AKTO_SYNC});
-
-
-        // Project ID
-        BasicDBObject project = new BasicDBObject();
-        project.put("key", this.projId);
-        fields.put("project", project);
-
-        // Issue description
-        BasicDBObject description = new BasicDBObject();
-        description.put("type", "doc");
-        description.put("version", 1);
         BasicDBList contentList = new BasicDBList();
         contentList.add(buildContentDetails(jiraMetaData.getHostStr(), null));
         contentList.add(buildContentDetails(jiraMetaData.getEndPointStr(), null));
         contentList.add(buildContentDetails("Issue link - Akto dashboard", jiraMetaData.getIssueUrl()));
         contentList.add(buildContentDetails(jiraMetaData.getIssueDescription(), null));
-        description.put("content", contentList);
 
-        fields.put("description", description);
+        List<BasicDBObject> additionalFields = buildAdditionalIssueFieldsForJira(info, issue, remediation);
+        if (!CollectionUtils.isEmpty(additionalFields)) {
+            contentList.addAll(additionalFields);
+        }
 
+        BasicDBObject fields = buildPayloadForJiraTicket(summary, this.projId, this.issueType, contentList,jiraMetaData.getAdditionalIssueFields());
+        fields.put("labels", new String[] {JobConstants.TICKET_LABEL_AKTO_SYNC});
         return fields;
+    }
+
+    private Map<String, Remediation> getRemediationMap(List<String> testingSubCategories) {
+        List<Remediation> remediationList = RemediationsDao.instance.findAll(
+            Filters.in(Constants.ID,
+                testingSubCategories.stream().map(this::getRemediationId)
+                    .collect(Collectors.toList())));
+
+        return remediationList.stream()
+            .collect(Collectors.toMap(
+                Remediation::getid,
+                Function.identity()
+            ));
+    }
+
+    private String getRemediationId(String testSubCategory) {
+        return String.format(REMEDIATION_INFO_URL, testSubCategory);
     }
 
     public String getBaseUrl() {
@@ -1052,6 +1096,14 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
     @Override
     public void setServletRequest(HttpServletRequest request) {
         this.dashboardUrl = com.akto.utils.Utils.createDashboardUrlFromRequest(request);
+    }
+
+    public Map<String, Map<String, BasicDBList>> getCreateIssueFieldMetaData() {
+        return createIssueFieldMetaData;
+    }
+
+    public void setCreateIssueFieldMetaData(Map<String, Map<String, BasicDBList>> createIssueFieldMetaData) {
+        this.createIssueFieldMetaData = createIssueFieldMetaData;
     }
 
     private void addAktoHostUrl() {
@@ -1191,5 +1243,76 @@ public class JiraIntegrationAction extends UserAction implements ServletRequestA
             JobExecutorType.DASHBOARD,
             TICKET_SYNC_JOB_RECURRING_INTERVAL_SECONDS
         );
+    }
+
+    public String createGeneralJiraTicket() {
+        jiraIntegration = JiraIntegrationDao.instance.findOne(new BasicDBObject());
+        if (jiraIntegration == null) {
+            addActionError("Jira is not integrated.");
+            return ERROR.toUpperCase();
+        }
+
+        try {
+            BasicDBList contentList = new BasicDBList();
+            contentList.add(buildContentDetails(this.description, null));
+            BasicDBObject fields = buildPayloadForJiraTicket(this.title, this.projId, this.issueType, contentList, null);
+
+            BasicDBObject reqPayload = new BasicDBObject();
+            reqPayload.put("fields", fields);
+            Request.Builder requestBuilder = buildBasicRequest(
+                jiraIntegration.getBaseUrl() + CREATE_ISSUE_ENDPOINT,
+                jiraIntegration.getUserEmail(),
+                jiraIntegration.getApiToken(),
+                false
+            );
+            RequestBody body = RequestBody.create(
+                reqPayload.toJson(),
+                MediaType.parse("application/json")
+            );
+            Request request = requestBuilder.post(body).build();
+            Response response = null;
+            Call call = client.newCall(request);
+            String responsePayload = null;
+            try {
+                response = call.execute();
+                responsePayload = response.body().string();
+
+                if (response.code() > 201 || responsePayload == null) {
+                    String error = handleError(responsePayload);
+                    if (error != null) {
+                        addActionError("Error while creating Jira issue: " + error);
+                    }
+                    return Action.ERROR.toUpperCase();
+                }
+
+                Pair<String, String> pair = getJiraTicketUrlPair(responsePayload, jiraIntegration.getBaseUrl());
+                this.jiraTicketKey = pair.getSecond();
+                String jiraTicketUrl = pair.getFirst();
+                if (!StringUtils.isEmpty(this.actionItemType)) {
+                    storeTicketUrlInAccountSettings(jiraTicketUrl);
+                }
+
+            } catch (Exception e) {
+                // TODO: handle exception
+            }
+            return Action.SUCCESS.toUpperCase();
+
+        } catch (Exception e) {
+            loggerMaker.errorAndAddToDb(
+                "Error creating general Jira ticket: " + e.getMessage(),
+                LoggerMaker.LogDb.DASHBOARD
+            );
+            return Action.ERROR.toUpperCase();
+        }
+    }
+
+    private void storeTicketUrlInAccountSettings(String jiraTicketUrl) {
+        try {
+            AccountSettingsDao.instance.updateOneNoUpsert(AccountSettingsDao.generateFilter(),
+                Updates.set(AccountSettings.JIRA_TICKET_URL_MAP + "." + this.actionItemType, jiraTicketUrl)
+            );
+        } catch (Exception e) {
+            loggerMaker.errorAndAddToDb("Error storing Jira URL: " + e.getMessage(), LoggerMaker.LogDb.DASHBOARD);
+        }
     }
 }
